argo-cd/overlays/production/argocd-application-controller-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: argocd-application-controller
        image: jas612/argocd:v2.1.0
