argo-cd/overlays/production/argocd-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: argocd-server
        # image: alinbalutoiu/argocd:v2.0.3
        image: cyrilix/argocd:v2.0.5
        command: [argocd-server, --staticassets, /shared/app, --insecure]
